--- a/src/assets/styles/structure.css
+++ b/src/assets/styles/structure.css
@@ -34,3 +34,8 @@ section {
 section:first-child {
   margin-top: 0;
 }
+
+hr {
+  border: none;
+  margin: var(--spacing-4) 0;
+}
